[package]
name = "options-trading"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "options_trading"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = { version = "0.24.2", features = ["dex"] }
solana-program = "1.9.13"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
psyfi-serum-dex-permissioned = { version = "0.5.6" }
